# email-triage

./: .gitignore  CHANGELOG.md  LICENSE  OPENCLAW.md  README.md  pyproject.toml  skill.md
.github/workflows/: ci.yml  publish.yml
docs/: current-design.md
examples/: inbox.jsonl
schema/: email-triage.schema.json
scripts/: convert-hf-to-gguf.sh  e2e_benchmark.py  serve-llama-cpp.sh
src/email_triage/: __init__.py  api.py  backends.py  cli.py  guardrails.py  harness.py  models.py  prompt.py  prompt_injection.py  schema.py  serve.py
tests/: test_api.py  test_cli.py  test_harness.py  test_models.py  test_prompt.py  test_prompt_injection.py  test_schema.py  test_serve.py
