[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "email-triage"
dynamic = ["version"]
description = "Whisper-style local CLI and Python API for strict JSON email triage."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Email Triage contributors" }]
keywords = ["email", "triage", "security", "classification", "llama.cpp", "huggingface"]
dependencies = [
  "huggingface-hub>=0.30",
  "joblib>=1.4",
  "scikit-learn>=1.4",
  "scipy>=1.10",
]

[project.scripts]
email-triage = "email_triage.cli:main"

[tool.hatch.version]
path = "src/email_triage/__init__.py"
